--- a/FETarjetaCredito/src/app/components/tarjeta-credito/tarjeta-credito.component.html
+++ b/FETarjetaCredito/src/app/components/tarjeta-credito/tarjeta-credito.component.html
@@ -13,9 +13,9 @@
         <div class="col-lg-6">
             <div class="card">
                 <div class="card-body">
-                    <h5 class="titulo">Agregar Tarjeta</h5>
+                    <h5 class="titulo">{{accion |uppercase}} TARJETA</h5>
 
-                    <form [formGroup]="form" (ngSubmit)="agregarTarjeta()">
+                    <form [formGroup]="form" (ngSubmit)="guardarTarjeta()">
                         <div class="input-group input-group-lg mb-3">
                             <span class="input-group-text"><i class="far fa-user"
                                     [class.green-icon]="this.form.get('titular')?.valid"
@@ -85,7 +85,7 @@
                                 <td>{{ tarjeta.numeroTarjeta }}</td>
                                 <td>{{ tarjeta.fechaExpiracion }}</td>
 
-                                <td><i class="far fa-edit text-info"></i></td>
+                                <td><i class="far fa-edit text-info" (click)="editarTarjeta(tarjeta)"> </i></td>
                                 <td><i class="far fa-trash-alt text-danger" (click)="eliminarTarjeta(tarjeta.id)"></i>
                                 </td>
                             </tr>
